syntax = "proto3";

//import "google/protobuf/timestamp.proto-go";

service VM {
    rpc CreateVM (VMData) returns (Result) {
    }
    rpc DeleteVM (VMID) returns (Result) {
    }
    rpc StartVM (VMID) returns (Result) {
    }
    rpc StopVM (VMID) returns (Result) {
    }
    rpc GetVM (VMID) returns (VMData) {
    }
    rpc GetVMName (VMName) returns (VMData) {
    }
    rpc GetAllVM (VMID) returns (Result) {
    }
}

message VMData {
    int64 id = 1;
    string vmname = 2;
    int64 vcpu = 3;
    int64 vmem = 4;
    string storage_path = 5;
    int64 storage = 6;
    string cdrom_path = 7;
    string vnet = 8;
    int64 vnc = 9;
    bool change = 10;
}

message VMName {
    string vmname = 1;
}

message VMDataResponse {
    repeated VMData VMDatas = 1;
}

message VMID {
    int64 id = 1;
}


message Result {
    bool status = 1;
}
